# RGBD-SLAM-learning

./: README.md
lesson1_0302_pc_registration/: CMakeLists.txt
lesson1_0302_pc_registration/.kdev4/: lesson1_0302_pc_registration.kdev4
lesson1_0302_pc_registration/include/: base.h
lesson1_0302_pc_registration/src/: base.cpp  showRGBD.cpp
lesson1_0302_showRGBD/src/: CMakeLists.txt
lesson2_0303_pc_registration/: CMakeLists.txt  Save2FrmaeTrajectory_0_20.txt  Save2FrmaeTrajectory_100_110.txt  Save2FrmaeTrajectory_200_205.txt  Save2FrmaeTrajectory_200_210.txt  lesson2_0303_pc_registration.kdev4
lesson2_0303_pc_registration/.kdev4/: lesson2_0303_pc_registration.kdev4
lesson2_0303_pc_registration/include/: base.h
lesson2_0303_pc_registration/src/: CMakeLists.txt  base.cpp  pc_registration.cpp
lesson3_0306_nonlinear_optimization/: CMakeLists.txt  Save2FrmaeTrajectory_200_205.txt  Update_Save2FrmaeTrajectory_200_205.txt
lesson3_0306_nonlinear_optimization/include/: base.h
lesson3_0306_nonlinear_optimization/src/: CMakeLists.txt  base.cpp
lesson4_0311_visual_odometry/: CMakeLists.txt  Save2FrmaeTrajectory_0to100.txt  Save2FrmaeTrajectory_0to50.txt  Save2FrmaeTrajectory_0to573.txt  Save2FrmaeTrajectory_0to792.txt  Save2FrmaeTrajectory_225to240.txt  Save2FrmaeTrajectory_228to240.txt  Save2FrmaeTrajectory_231to240.txt  Save2FrmaeTrajectory_231to243.txt  Save2FrmaeTrajectory_300to310.txt  Save2FrmaeTrajectory_302to311.txt  Save2FrmaeTrajectory_302to313.txt  Save2FrmaeTrajectory_35to45.txt  Save2FrmaeTrajectory_39to43.txt  Save2FrmaeTrajectory_45to50.txt  Save2FrmaeTrajectory_5to10.txt  _Save2FrmaeTrajectory_39to43.txt
lesson4_0311_visual_odometry/include/: base.h
lesson4_0311_visual_odometry/src/: CMakeLists.txt  base.cpp  nonlinear_optimization.cpp  showRGBD.cpp  visual_odometry.cpp
